--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,7 +1,240 @@
-@import "nullstyle";//Clear Style.css
+@import "nullstyle";
+@import "variables";
 
 body{
-   background-color: gray;
-   color: black;
-   margin: 50px;
+   font-family: Exo2;
+   font-weight: 400;
+   font-size: 20px;
+   background-color: $color_background;
+   color: $color_text;
+   line-height: 100%;
 }
+
+a{
+   font-family: Exo2;
+}
+
+.wrapper{
+   max-width: 1340px;
+   margin: 0 auto;
+   padding: 0 20px;
+}
+
+
+//////////////////HEADER/////////////////////////
+
+
+.header{
+   height: 80px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.header__about{
+   display: flex;
+   align-items: center;
+}
+
+.header__about div + div{
+   margin-left: 20px;
+}
+
+.header__about a{
+   font-weight: 500;
+   font-size: 16px;
+   color: $color_text;
+}
+
+.header__schedule{
+   font-weight: 500;
+   font-size: 16px;
+   color: $grey_text;
+}
+
+.header__inputs{
+   margin-left: 58px;
+   display: flex;
+   align-items: center;
+   justify-content: right;
+}
+
+.header__search{
+   height: 42px;
+   width: 107px;
+   border-bottom: 1px solid #C8CACB;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   position: relative;
+   margin-right: 8px;
+}
+
+.header__search_input{
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 19px;
+   color: #838688;
+   width: 100%;
+   padding: 5px 5px 5px 36px;
+   margin-left: 12px;
+   height: 20px;
+   background: url('../images/dest/icons/search.svg') no-repeat 3px 1px;
+   background-size: auto 100%;
+   transition: padding 0.2s ease-out;
+   &:focus{
+      padding: 0;
+      background: none;
+      margin-left: 0px;
+   }
+}
+
+.header__menu{
+   display: flex;
+   align-items: center;
+   justify-content: right;
+}
+
+.header__click{
+   cursor: pointer;
+   width: 48px;
+   height: 48px;
+   object-fit: scale-down;
+}
+
+.header__button{
+   background-color: #2A5275;
+   color: #FFF;
+   border-radius: 4px;
+   padding: 0 26px;
+   height: 48px;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 48px;
+   cursor: pointer;
+   transition: background-color 0.3s ease-out;
+   &:hover{
+      background-color: #0E1821;
+   }
+}
+
+.header__enter{
+   margin-left: 20px;
+}
+
+@media (max-width:1200px) {
+   .header__about, .header__search, .header__cart{
+      display: none;
+   }
+}
+
+@media (max-width:576px) {
+   .wrapper{
+      padding: 0 10px;
+   }
+   .header__eye, .header__like, .header__compare{
+      display: none;
+   }
+   .header__inputs{
+      margin-left: 0;
+   }
+   .header__enter{
+      margin-left: 0px;
+   }
+}
+
+
+
+////////////////MENU/////////////////////
+menu{
+   width: 100%;
+   height: 60px;
+   background-color: #0E1821;
+}
+
+.menu__wrapper{
+   max-width: 1340px;
+   margin: 0 auto;
+   padding: 0 20px;
+   height: 100%;
+}
+
+.menu__container{
+   display: flex;
+   align-items: center;
+   justify-content: left;
+   height: 100%;
+}
+
+.menu__catalog{
+   display: flex;
+   align-items: center;
+   justify-content: left;
+   cursor: pointer;
+   height: 100%;
+   width: 300px;
+   padding: 0 20px;
+   transition: all 0.2s ease-out;
+   &:hover{
+      background-color: #243C53;
+   }
+}
+
+.catalog__name{
+   color: #FFF;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 100%;
+   margin-left: 10px;
+}
+
+.menu__nav{
+   height: 100%;
+}
+
+.menu__nav ul{
+   display: flex;
+   align-items: center;
+   justify-content: left;
+   height: 100%;
+}
+
+.menu__nav ul li{
+   padding: 0 20px;
+   cursor: pointer;
+   height: 100%;
+   transition: all 0.2s ease-out;
+   &:hover{
+      background-color: #243C53;
+   }
+}
+
+.menu__nav ul li a{
+   font-weight: 500;
+   font-size: 16px;
+   color: #FFFFFF;
+   line-height: 60px;
+   height: 100%;
+}
+
+
+
+@media (max-width:1200px) {
+   menu{
+      display: none;
+   }
+}
+
+
+.catalog{
+   width: 300px;
+   background-color: #EDF2F6;
+   border-bottom-left-radius: 8px;
+   border-bottom-right-radius: 8px;
+}
+
+.catalog__item{
+   padding-left: 18px;
+}
+
+.catalog__item
