--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -10,6 +10,10 @@ body{
    line-height: 100%;
 }
 
+.body_overflow{
+   overflow: hidden;
+}
+
 a{
    font-family: Exo2;
 }
@@ -161,6 +165,7 @@ a{
 .menu-profile ul li{
    height: 54px;
    transition: background-color 0.2s ease-out;
+   cursor: pointer;
    &:hover{
       background-color: #DAE4ED;
    }
@@ -186,6 +191,19 @@ a{
    line-height: 54px;
    color: #F15152;
    border-top: 1px solid #EAEAF0;
+}
+
+.menu-profile__enter{
+   padding-left: 20px;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 54px;
+   color: #4878A6;
+   border-top: 1px solid #EAEAF0;
+}
+
+.menu-profile__enter__active{
+   display: none;
 }
 
 
@@ -878,10 +896,11 @@ menu{
    align-items: center;
    width: 100%;
    margin-top: 20px;
+   margin-bottom: -20px;
 }
 
 .ad {
-   flex:1 0 49%;
+   flex:0 1 49%;
    display: flex;
    justify-content: space-between;
    align-items: center;
@@ -889,7 +908,7 @@ menu{
    background: #EDF2F6;
    border-radius: 8px;
    padding: 50px 30px 50px 50px;
-   margin: 20px 0;
+   margin: 10px 0;
 }
 
 .ad__text {
@@ -909,6 +928,7 @@ menu{
    }
    .ad {
       width: 100%;
+      flex: 1 0 180px;
    }
 }
 @media (max-width:576px){
@@ -923,4 +943,56 @@ menu{
    .ad__img {
       height: 150px;
    }
+}
+
+
+.modal{
+   position: fixed;
+   width: 100vw;
+   height: 100vh;
+   left: 0;top: 0;bottom: 0;right: 0;
+   z-index: 99;
+   display: none;
+}
+
+.modal_active{
+   display: block;
+}
+
+.modal__overlay{
+   width: 100%;
+   height: 100%;
+   background: rgba(#2A5275, 0.7);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.modal__window{
+   width: 370px;
+   height: 100px;
+   background-color: #fff;
+   border-radius: 8px;
+}
+
+.modal__header{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   background-color: #EDF2F6;
+   height: 68px;
+   padding: 0 30px 0 30px;
+   border-top-left-radius: 8px;
+   border-top-right-radius: 8px;
+}
+
+.modal__title{
+   font-weight: 600;
+   font-size: 24px;
+   line-height: 120%;
+   color: #070C11;
+}
+
+.modal__icon-close{
+   cursor: pointer;
 }
