--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -150,12 +150,13 @@ a{
    left: auto;
    right: 20px;
    transform: translate(0, -100%);
-   transition: transform 0.3s ease-out;
+   transition:none;
    z-index: 4;
 }
 
 .menu-profile_active{
    transform: translate(0, 0%);
+   transition: transform 0.3s ease-out;
 }
 
 .menu-profile ul{
@@ -970,9 +971,22 @@ menu{
 
 .modal__window{
    width: 370px;
-   height: 100px;
    background-color: #fff;
    border-radius: 8px;
+}
+
+
+@media (max-width:576px){
+   .modal__overlay{
+      align-items: flex-end;
+   }
+
+   .modal__window{
+      width: 100%;
+      min-height: 85%;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+   }
 }
 
 .modal__header{
@@ -995,4 +1009,123 @@ menu{
 
 .modal__icon-close{
    cursor: pointer;
+}
+
+.modal__wrapper{
+   padding: 20px 30px 30px 30px;
+   background-color: #fff;
+}
+.modal__name-input{
+   font-weight: 400;
+   font-size: 16px;
+}
+
+.modal__input-email{
+   width: 100%;
+   height: 48px;
+   border: 1px solid #EAEAF0;
+   border-radius: 5px;
+   font-family: 'Inter';
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 150%;
+   padding-left: 20px;
+}
+.modal__passord{
+   position: relative;
+}
+
+.modal__input-password{
+   width: 100%;
+   height: 48px;
+   border: 1px solid #EAEAF0;
+   border-radius: 5px;
+   font-family: 'Inter';
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 150%;
+   padding-left: 30px;
+   background: url('../images/dest/icons/lock.svg') no-repeat 3px 1px;
+   background-size: auto 60%;
+   background-position: center left;
+}
+
+.modal__password_eye{
+   position: absolute;
+   right: 10px;
+   top: 20px;
+   width: 32px;
+   height: 32px;
+   background: url('../images/dest/icons/eye.svg') no-repeat;
+   background-size: auto 90%;
+   background-position: center;
+   cursor: pointer;
+   transition: all 0.1s ease-in-out;
+}
+
+.modal__password_eye_off{
+   background: url('../images/dest/icons/eye-off.svg') no-repeat;
+   background-size: auto 90%;
+}
+
+.mt8{
+   margin-top: 8px;
+}
+
+.mt20{
+   margin-top: 20px;
+}
+.mt10{
+   margin-top: 10px;
+}
+
+.modal__forgot{
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 100%;
+   color: #4878A6;
+   display:inline-block
+}
+
+.check__label{
+   background:url('../images/dest/icons/check.svg') no-repeat;
+   cursor: pointer;
+}
+.check__label_unactive{
+   background:url('../images/dest/icons/uncheck.svg') no-repeat;
+}
+
+.check__label span{
+   display: inline-block;
+	position: relative; 
+	padding: 0 0 0 35px; 
+}
+
+.modal__button_enter{
+   background: #2A5275;
+   width: 100%;
+   height: 48px;
+   border-radius: 4px;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 48px;
+   color: #FFFFFF;
+   text-align: center;
+   transition: all 0.2s ease-in-out;
+   &:hover{
+      transform: scale(1.02);
+   }
+}
+
+.modal__sign-enter{
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 100%;
+   color: #4878A6;
+   text-align: center;
+   cursor: pointer;
+   transition: all 0.2s ease-in-out;
+   &:hover{
+      transform: scale(1.02);
+   }
 }
