--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -166,6 +166,7 @@ a{
 .menu-profile ul li{
    height: 54px;
    transition: background-color 0.2s ease-out;
+   -webkit-transition: background-color 0.2s ease-out;
    cursor: pointer;
    &:hover{
       background-color: #DAE4ED;
@@ -317,7 +318,7 @@ menu{
 .catalog__wrapper{
    width: 100%;
    height: 100%;
-   position:fixed;
+   position:absolute;
    z-index: 2;
    top: -100%;
    transition: top 0.2s ease-out;
@@ -346,6 +347,7 @@ menu{
    .catalog__wrapper{
       background: #4878A6;
       z-index: 5; 
+      position: fixed;
    }
 
    .catalog{
@@ -827,6 +829,7 @@ menu{
    height: 48px;
    background-image: url('../images/dest/icons/like_in_card.svg');
    transition: all 0.2s ease;
+   -webkit-transition: all 0.2s ease;
    cursor: pointer;
 }
 
@@ -840,6 +843,7 @@ menu{
    background-image: url('../images/dest/icons/compare3.png');
    cursor: pointer;
    transition: all 0.2s ease;
+   -webkit-transition: all 0.2s ease;
 }
 
 .compare_active{
@@ -903,7 +907,7 @@ menu{
    width: 228px;
    padding: 13px 0;
    text-align: center;
-   transition: transform 0.1s ease-in-out;
+   transition: transform 0.1s ease;
    &:hover{
       transform: scale(1.04);
    }
@@ -913,7 +917,8 @@ menu{
    width: 48px;
    height: 48px;
    background-image: url('../images/dest/icons/basket/cart_in_card.svg');
-   transition: all 0.2s ease-in-out;
+   transition: all 0.2s ease;
+   -webkit-transition: all 0.2s ease;
    &:hover{
       background-image: url('../images/dest/icons/basket/cart_in_card_hover.svg');
    }
@@ -1092,7 +1097,8 @@ menu{
    background-size: auto 90%;
    background-position: center;
    cursor: pointer;
-   transition: all 0.1s ease-in-out;
+   transition: all 0.1s ease;
+   -webkit-transition: all 0.1s ease;
 }
 
 .modal__password_eye_off{
@@ -1143,7 +1149,7 @@ menu{
    line-height: 48px;
    color: #FFFFFF;
    text-align: center;
-   transition: all 0.2s ease-in-out;
+   transition: all 0.2s ease;
    &:hover{
       transform: scale(1.02);
    }
@@ -1156,7 +1162,7 @@ menu{
    color: #4878A6;
    text-align: center;
    cursor: pointer;
-   transition: all 0.2s ease-in-out;
+   transition: all 0.2s ease;
    &:hover{
       transform: scale(1.02);
    }
